# ask-panda-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: circular-imports.yml  flake8-workflow.yml  unit-tests.yml  vericode-pylint-check.yml
docker/: atlas-server.Dockerfile  epic-server.Dockerfile  verarubin-server.Dockerfile
mcp/: README.md  __init__.py  docs_server.py  panda_server.py
src/ask_panda/: __init__.py  server.py
src/ask_panda/api/: __init__.py  app.py  routes.py
src/ask_panda/cli/: __init__.py  main.py
src/ask_panda/clients/: __init__.py  base.py  data.py  docs.py  logs.py  maintenance.py  pilots.py  selection.py
src/ask_panda/config/: __init__.py  schemas.py
src/ask_panda/experiments/: __init__.py
src/ask_panda/experiments/atlas/: __init__.py  experiment.py
src/ask_panda/experiments/epic/: __init__.py  experiment.py
src/ask_panda/experiments/verarubin/: __init__.py  experiment.py
src/ask_panda/models/: __init__.py  base.py  ollama.py  openai.py
src/ask_panda/tools/: __init__.py  context_memory.py  vector_store.py
streamlit-ui/: README.md  app.py
tests/: __init__.py  test_api.py  test_clients.py  test_config.py  test_experiments.py  test_tools.py
